--- a/master-config.yml
+++ b/master-config.yml
@@ -3,7 +3,7 @@ config:
   info: This is default sever
   user: user001
   password: password001
-  accessmessage: default msg - spring cloud config data it's changed on 2017-05-01 13:31
+  accessmessage: default msg - spring cloud config data
 ---
 
 spring:
@@ -24,4 +24,4 @@ config:
   info: This is production sever
   user: user003
   password: password003
-  accessmessage: welcome to production server it's changed on 2017-05-01 13:32
+  accessmessage: welcome to production server
